--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-forge/maker-deb": "^7.10.2",
     "@electron-forge/maker-rpm": "^7.10.2",
     "@electron-forge/maker-squirrel": "^7.10.2",
+    "@electron-forge/maker-wix": "^7.10.2",
     "@electron-forge/maker-zip": "^7.10.2",
     "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
     "@electron-forge/plugin-fuses": "^7.10.2",
@@ -34,15 +35,55 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^5.1.2",
     "electron": "39.2.7",
+    "electron-wix-msi": "^5.1.3",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
     "typescript": "~4.5.4",
-    "vite": "^5.4.21"
+    "vite": "^5.4.21",
+    "@eslint/js": "^9.39.1",
+    "@redux-devtools/cli": "^4.0.4",
+    "@redux-devtools/remote": "^0.9.5",
+    "@types/lodash": "^4.17.21",
+    "@types/mime-types": "^3.0.1",
+    "@types/node": "^24.10.3",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "mime-types": "^3.0.2",
+    "prop-types": "^15.8.1",
+    "redux": "^5.0.1",
+    "typescript-eslint": "^8.49.0",
+    "vite-plugin-svgr": "^4.5.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
+    "chokidar": "^5.0.0",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "@reduxjs/toolkit": "^2.9.2",
+    "@silevis/reactgrid": "^4.1.17",
+    "@szhsin/react-menu": "^4.5.1",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "immutability-helper": "^3.1.1",
+    "lodash": "^4.17.21",
+    "natsort": "^2.0.3",
+    "react-datepicker": "^9.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-jdenticon": "^1.5.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.10.1",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^2.2.3",
+    "recharts": "^3.5.1",
+    "sqlite3": "^5.1.7"
   }
 }
