--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "electron": "39.2.7",
+    "electron-winstaller": "^5.4.0",
     "electron-wix-msi": "^5.1.3",
     "eslint": "^9.39.2",
     "eslint-plugin-import": "^2.32.0",
@@ -59,6 +60,7 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@reduxjs/toolkit": "^2.9.2",
