--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron-forge start -- --verbose",
     "package": "electron-forge package",
     "make": "electron-forge make",
+    "make-trace": "cross-env NODE_OPTIONS='--trace-deprecation' electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "redux": "redux-devtools --hostname=localhost --port=8001"
@@ -42,6 +43,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
+    "cross-env": "^10.1.0",
     "electron": "39.2.7",
     "electron-winstaller": "^5.4.0",
     "electron-wix-msi": "^5.1.3",
