--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "electron-squirrel-startup": "^1.0.1",
+    "iconv-lite": "^0.7.1",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "natsort": "^2.0.3",
