--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-window": "^2.2.3",
     "recharts": "^3.5.1",
     "sqlite3": "^5.1.7",
+    "upath": "^2.0.1",
     "xlsx": "^0.18.5"
   }
 }
