--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "@vitejs/plugin-react": "^5.1.2",
+    "@vitejs/plugin-react-swc": "^4.2.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "cross-env": "^10.1.0",
     "electron": "39.2.7",
@@ -76,7 +76,10 @@
     "electron-squirrel-startup": "^1.0.1",
     "iconv-lite": "^0.7.1",
     "immutability-helper": "^3.1.1",
+    "inversify": "^7.10.8",
     "lodash": "^4.17.21",
+    "mobx": "^6.15.0",
+    "mobx-react-lite": "^4.1.1",
     "natsort": "^2.0.3",
     "react": "^19.2.3",
     "react-datepicker": "^9.0.0",
@@ -89,6 +92,7 @@
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.3",
     "recharts": "^3.5.1",
+    "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "upath": "^2.0.1",
     "xlsx": "^0.18.5"
