--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "allowImportingTsExtensions": true,
     "noEmit": true,
     "strictNullChecks": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "lib": ["es6", "dom"],
+    "types": ["reflect-metadata"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
