--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "cross-env": "^10.1.0",
     "electron": "39.2.7",
+    "electron-devtools-installer": "^4.0.0",
     "electron-winstaller": "^5.4.0",
     "electron-wix-msi": "^5.1.3",
     "eslint": "^9.39.2",
