--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "strictNullChecks": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "lib": ["es6", "dom"],
+    "lib": ["es6", "dom", "ESNext"],
     "types": ["reflect-metadata"],
     "baseUrl": ".",
     "paths": {
