--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "make": "electron-forge make",
     "make-trace": "cross-env NODE_OPTIONS='--trace-deprecation' electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx .",
-    "redux": "redux-devtools --hostname=localhost --port=8000"
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
   "author": {
@@ -31,8 +30,6 @@
     "@electron-forge/plugin-vite": "^7.10.2",
     "@electron/fuses": "^1.8.0",
     "@eslint/js": "^9.39.1",
-    "@redux-devtools/cli": "^4.0.4",
-    "@redux-devtools/remote": "^0.9.5",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/lodash": "^4.17.21",
     "@types/mime-types": "^3.0.1",
@@ -55,7 +52,6 @@
     "globals": "^16.5.0",
     "mime-types": "^3.0.2",
     "prop-types": "^15.8.1",
-    "redux": "^5.0.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.50.0",
     "vite": "^7.3.0",
@@ -66,7 +62,6 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
-    "@reduxjs/toolkit": "^2.9.2",
     "@silevis/reactgrid": "^4.1.17",
     "@szhsin/react-menu": "^4.5.1",
     "@xterm/addon-fit": "^0.10.0",
@@ -88,7 +83,6 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.3",
     "react-jdenticon": "^1.5.0",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.3",
