--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "cross-env": "^10.1.0",
     "electron": "39.2.7",
-    "electron-devtools-installer": "^4.0.0",
     "electron-winstaller": "^5.4.0",
     "electron-wix-msi": "^5.1.3",
     "eslint": "^9.39.2",
@@ -75,6 +74,7 @@
     "inversify": "^7.10.8",
     "lodash": "^4.17.21",
     "mobx": "^6.15.0",
+    "mobx-logger": "^0.7.1",
     "mobx-react-devtools": "^6.1.1",
     "mobx-react-lite": "^4.1.1",
     "natsort": "^2.0.3",
